syntax = "proto3";

package fileservice;

option go_package = "github.com/AlexeyBurmak/image_service/gen/fileservice";

service FileService {
  rpc Upload(UploadRequest) returns (UploadResponse);
  rpc Download(DownloadRequest) returns (DownloadResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

// ==== Upload ====
message UploadRequest {
  string filename = 1;
  bytes file_data = 2;
}

message UploadResponse {
  string message = 1;
}


// ==== Download ====
message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes file_data = 1;
}


// ==== ListFiles ====
message ListFilesRequest {}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}

message ListFilesResponse {
  repeated FileInfo files = 1;
}
